<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <TextView
        android:id="@+id/tv6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/available_lamps"
        android:textColor="@android:color/white"
        android:textSize="20sp"
            android:padding="10dp"/>

    <ListView
        android:id="@+id/lvBeaconList"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/connectedTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/not_connected"
                    android:textSize="20sp"
                    android:textColor="@color/colorAccent"
                    android:paddingLeft="10dp"/>

                <Button
                    android:id="@+id/buttonAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/configure_all_lamps" />

                <!--<TextView-->
                    <!--android:id="@+id/tv4"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="20dp"-->
                    <!--android:background="@color/colorPrimaryDark"-->
                    <!--android:text="@string/finding_beacons"-->
                    <!--android:textColor="@android:color/white"-->
                    <!--android:textSize="20sp" />-->

                <!--<TextView-->
                    <!--android:id="@+id/logText"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="20dp"-->
                    <!--android:textSize="20sp" />-->

                <TextView
                    android:id="@+id/tv5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/lamp_status"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:padding="10dp"/>

                <!--<Button-->
                    <!--android:id="@+id/buttonGetStatus"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/get_status"-->
                    <!--android:gravity="center"-->
                    <!--android:background="@color/colorAccent"-->
                    <!--android:textColor="@android:color/white"-->
                    <!--android:layout_marginLeft="10dp"/>-->

                <TextView
                    android:id="@+id/dataReceived"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text=''
                    android:textSize="20sp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/tv7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/lamp_configurations"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:padding="10dp"/>

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginLeft="20dp"
                    android:text="@string/hue_"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/seekBarHue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp" />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginLeft="20dp"
                    android:text="@string/brightness_"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/seekBarBrightness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp" />

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginLeft="20dp"
                    android:text="@string/saturation_"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/seekBarSat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <Button
                    android:id="@+id/buttonOn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/on" />

                <Button
                    android:id="@+id/buttonOff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/off" />
            </LinearLayout>
</LinearLayout>
